aplicações/fake-shop/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-shop
  namespace: fake-shop
  labels:
    app: fake-shop
spec:
  selector:
    matchLabels:
      app: fake-shop
  template:
    metadata:
      labels:
        app: fake-shop
    spec:
      containers:
      - name: fake-shop
        image: thefly72003/fake-shop:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
