aplicações/fake-shop/bd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: fake-shop
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
