aplicações/fake-shop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-shop-ingress
  labels:
    name: fake-shop-ingress
  annotations:
    kubernetes.io/ingress.class: "envoy"
spec:
  rules:
  - host: fake-shop.rodrigues.lat
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fake-shop
            port: 
              number: 80
